[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-iranian-bank-gateways"
version = "0.2.0"
description = "FastAPI integration for all major Iranian bank payment gateways"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["fastapi", "payment", "iran", "gateway", "bank", "درگاه", "پرداخت"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.100.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "httpx>=0.24.0,<1.0",
    "jinja2>=3.1.0,<4.0",
]

[project.optional-dependencies]
soap = [
    "zeep>=4.1.0,<5.0",
    "lxml>=4.9.0,<6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = [
    "fastapi-iranian-bank-gateways[soap]",
]

[project.urls]
Homepage = "https://github.com/MehranDashti/fastapi-iranian-bank-gateways"
Repository = "https://github.com/MehranDashti/fastapi-iranian-bank-gateways"
Changelog = "https://github.com/MehranDashti/fastapi-iranian-bank-gateways/blob/main/CHANGELOG.md"
Documentation = "https://github.com/MehranDashti/fastapi-iranian-bank-gateways#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_iranian_bank_gateways"]

[tool.hatch.build]
include = [
    "src/fastapi_iranian_bank_gateways/**/*.py",
    "src/fastapi_iranian_bank_gateways/templates/**/*.html",
    "src/fastapi_iranian_bank_gateways/py.typed",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/fastapi_iranian_bank_gateways --cov-report=term-missing"

[tool.coverage.run]
source = ["src/fastapi_iranian_bank_gateways"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
omit = ["*/templates/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
